# openstack_mimic_component

./: .gitlab-ci.yml  CMakeLists.txt  README.md  check_mimic.sh  keystone_util.py
deploy/: CMakeLists.txt  config.sh  deploy.sh  functions.sh  logcuter.sh  variables.sh
etc/: CMakeLists.txt  keepalived.conf.master  keepalived.conf.slaver  mimic_cloud.yml
libs/evhtp/: CMakeLists.txt  evhtp.c  numtoa.c  parser.c  thread.c
libs/hiredis/: CMakeLists.txt  hiredis.c  ssl.c  test.c
libs/include/: evhtp.h  internal.h  log.h  numtoa.h  refcount.h
libs/include/evhtp/: config.h  config.h.in  evhtp.h  parser.h
libs/include/hiredis/: hiredis.h
libs/jsoncpp/: CMakeLists.txt  json_value.cpp
libs/jsoncpp/bak/: CMakeLists.txt_bak
libs/redis++/: CMakeLists.txt
libs/yamlcpp/: CMakeLists.txt
pkg/: make_pkg.sh
pkg/deb/aarch64/: Dockerfile  deb_build_run.sh  make_deb.sh
pkg/rpm/x86_64/: Dockerfile  make_rpm.sh  mimic-cloud.spec  rpm_build_run.sh  spdlog.spec
src/: CMakeLists.txt  judge_task.cpp  mimic.cpp  mimic_jthread.cpp  mimic_judge.cpp  mimic_lanucher.cpp  mimic_proxy.cpp  mimic_schedule.cpp  mimic_service.cpp  mimic_suber.cpp  mimic_timer.cpp  mimic_util.cpp  proxy_task.cpp
src/include/: mimic_jthread.hpp  mimic_judge.hpp  mimic_lanucher.hpp  mimic_proxy.hpp  mimic_schedule.hpp  mimic_service.hpp  mimic_struct.hpp  mimic_suber.hpp  mimic_task.hpp  mimic_timer.hpp  mimic_util.hpp
systemd/: CMakeLists.txt  mimic-cloud@.service
